--- a/index.html
+++ b/index.html
@@ -57,10 +57,10 @@ body, html {
 <!-- Header with full-height image -->
 <header class="bgimg-1 w3-display-container w3-grayscale-min" id="home">
   <div class="w3-display-left w3-text-white" style="padding:48px">
-    <span class="w3-jumbo w3-hide-small">Start something that matters</span><br>
-    <span class="w3-xxlarge w3-hide-large w3-hide-medium">Start something that matters</span><br>
-    <span class="w3-large">Stop wasting valuable time with projects that just isn't you.</span>
-    <p><a href="#about" class="w3-button w3-white w3-padding-large w3-large w3-margin-top w3-opacity w3-hover-opacity-off">Learn more and start today</a></p>
+    <span class="w3-jumbo w3-hide-small">Unlock</span><br>
+    <span class="w3-xxlarge w3-hide-large w3-hide-medium">Unlock</span><br>
+    <span class="w3-large">Un club de cybersécurite et hack dans ton école.</span>
+    <p><a href="#about" class="w3-button w3-white w3-padding-large w3-large w3-margin-top w3-opacity w3-hover-opacity-off">En savoir plus</a></p>
   </div>
 </header>
 
@@ -77,7 +77,7 @@ body, html {
     <div class="w3-quarter">
       <i class="fa fa-heart w3-margin-bottom w3-jumbo"></i>
       <p class="w3-large">Passion</p>
-      <p>La cybersécurité est notre passion.</p>
+      <p>Viens partager ton amour pour les binaires et les codes hexadécimaux avec <del>nous</del> moi.</p>
     </div>
     <div class="w3-quarter">
       <i class="fa fa-flag w3-margin-bottom w3-jumbo"></i>
@@ -85,9 +85,9 @@ body, html {
       <p>Nous participons à divers CTF que ce soit en remote ou en physique.</p>
     </div>
     <div class="w3-quarter">
-      <i class="fa fa-cog w3-margin-bottom w3-jumbo"></i>
-      <p class="w3-large">TODO</p>
-      <p>TODO.</p>
+      <i class="fa fa-server w3-margin-bottom w3-jumbo"></i>
+      <p class="w3-large">Une plateforme d'entraînement dédiée</p>
+      <p>Nous avons accès à la propre plateforme d'entraînement de l'ENSEIRB-MATMECA, celles que les 3A utilisent.</p>
     </div>
   </div>
 </div>
@@ -113,44 +113,41 @@ body, html {
   <div class="w3-row-padding w3-grayscale" style="margin-top:64px">
     <div class="w3-col l3 m6 w3-margin-bottom">
       <div class="w3-card">
-        <img src="/w3images/team2.jpg" alt="John" style="width:100%">
+        <img src="https://lists.gnu.org/archive/html/emacs-devel/2015-10/pngR9b4lzUy39.png" alt="Lucas" style="width:100%">
         <div class="w3-container">
-          <h3>Lucas Henry</h3>
+          <h3>Lucas</h3>
           <p class="w3-opacity">Fondateur & Président</p>
-          <p>CE QUE TU VEUX LUCAS. Et surement que Emacs > ALL</p>
-          <p><button class="w3-button w3-light-grey w3-block"><i class="fa fa-envelope"></i> Contact</button></p>
+          <p>Emacs > ALL</p>
         </div>
       </div>
     </div>
     <div class="w3-col l3 m6 w3-margin-bottom">
       <div class="w3-card">
-        <img src="/w3images/team1.jpg" alt="Jane" style="width:100%">
+        <img src="./ressources/pandicron.png" alt="Panda" style="width:100%">
         <div class="w3-container">
-          <h3>Théo MATRICON</h3>
+          <h3>Panda</h3>
           <p class="w3-opacity">Fondateur</p>
-          <p>BLAH BLAH BLAH. Atom ~ Emacs et Vim > Emacs :P</p>
-          <p><button class="w3-button w3-light-grey w3-block"><i class="fa fa-envelope"></i> Contact</button></p>
+          <p>BLABLABLAH: \x89\xe3\xb8\x6e\x69\x62\x2f\x50\xb8\x73\x61\x62\x2f\x50\xb8\x00\x00\x0a\x68\x13\x50\x14\x31\xc0\x16\x31\xc9\x18\x31\xd2\x1a\xb0\x0b\x1c\xcd\x80</p>
         </div>
       </div>
     </div>
     <div class="w3-col l3 m6 w3-margin-bottom">
       <div class="w3-card">
-        <img src="/w3images/team3.jpg" alt="Mike" style="width:100%">
+        <img src="/w3images/team3.jpg" alt="Eloa" style="width:100%">
         <div class="w3-container">
-          <h3>Eloïse Brocas</h3>
+          <h3>Eloa</h3>
           <p class="w3-opacity">Fondatrice</p>
-          <p>Chiffre ton disque dur avec au minimum 3 backups !</p>
-          <p><button class="w3-button w3-light-grey w3-block"><i class="fa fa-envelope"></i> Contact</button></p>
+          <p>(et oui nos 3 prénoms riment !) - Régle 3-2-1 !</p>
         </div>
       </div>
     </div>
   </div>
 </div>
 
-<!-- Promo Section "Statistics" -->
+<!-- Promo Section "Statistics"
 <div class="w3-container w3-row w3-center w3-dark-grey w3-padding-64">
   <div class="w3-quarter">
-    <span class="w3-xxlarge">14+</span>
+    <span class="w3-xxlarge">10+</span>
     <br>Partners
   </div>
   <div class="w3-quarter">
@@ -165,81 +162,61 @@ body, html {
     <span class="w3-xxlarge">150+</span>
     <br>Meetings
   </div>
-</div>
+</div> -->
 
 <!-- Work Section -->
 <div class="w3-container" style="padding:128px 16px" id="work">
-  <h3 class="w3-center">OUR WORK</h3>
-  <p class="w3-center w3-large">What we've done for people</p>
+  <h3 class="w3-center">Plateformes d'entrainements</h3>
+  <p class="w3-center w3-large">Les plateformes utilisées par le club</p>
 
   <div class="w3-row-padding" style="margin-top:64px">
     <div class="w3-col l3 m6">
-      <img src="/w3images/tech_mic.jpg" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="A microphone">
+      <a href="http://overthewire.org/">Over The Wire</a> (débutant à avancé)
     </div>
     <div class="w3-col l3 m6">
-      <img src="/w3images/tech_phone.jpg" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="A phone">
+      <a href="https://www.root-me.org/">Root Me</a> (débrouillard à avancé)
     </div>
     <div class="w3-col l3 m6">
-      <img src="/w3images/tech_drone.jpg" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="A drone">
-    </div>
-    <div class="w3-col l3 m6">
-      <img src="/w3images/tech_sound.jpg" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="Soundbox">
-    </div>
-  </div>
-
-  <div class="w3-row-padding w3-section">
-    <div class="w3-col l3 m6">
-      <img src="/w3images/tech_tablet.jpg" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="A tablet">
-    </div>
-    <div class="w3-col l3 m6">
-      <img src="/w3images/tech_camera.jpg" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="A camera">
-    </div>
-    <div class="w3-col l3 m6">
-      <img src="/w3images/tech_typewriter.jpg" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="A typewriter">
-    </div>
-    <div class="w3-col l3 m6">
-      <img src="/w3images/tech_tableturner.jpg" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="A tableturner">
+      La plateforme RSR, en exclusivité à l'ENSEIRB-MATMECA.
     </div>
   </div>
 </div>
 
-<!-- Modal for full size images on click-->
+<!-- Modal for full size images on click
 <div id="modal01" class="w3-modal w3-black" onclick="this.style.display='none'">
   <span class="w3-button w3-xxlarge w3-black w3-padding-large w3-display-topright" title="Close Modal Image">×</span>
   <div class="w3-modal-content w3-animate-zoom w3-center w3-transparent w3-padding-64">
     <img id="img01" class="w3-image">
     <p id="caption" class="w3-opacity w3-large"></p>
   </div>
-</div>
+</div> -->
 
 <!-- Skills Section -->
 <div class="w3-container w3-light-grey w3-padding-64">
   <div class="w3-row-padding">
     <div class="w3-col m6">
-      <h3>Our Skills.</h3>
-      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod<br>
-      tempor incididunt ut labore et dolore.</p>
-      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod<br>
-      tempor incididunt ut labore et dolore.</p>
+      <h3>Skills.</h3>
+      <p>Voici les skills de notre équipe de CTF, échelle en fonction de notre meilleur skill.</p>
     </div>
     <div class="w3-col m6">
-      <p class="w3-wide"><i class="fa fa-camera w3-margin-right"></i>Photography</p>
+      <p class="w3-wide"><i class="fa fa-unlock w3-margin-right"></i>Reverse</p>
       <div class="w3-grey">
-        <div class="w3-container w3-dark-grey w3-center" style="width:90%">90%</div>
+        <div class="w3-container w3-dark-grey w3-center" style="width:100%">100%</div>
       </div>
-      <p class="w3-wide"><i class="fa fa-desktop w3-margin-right"></i>Web Design</p>
-      <div class="w3-grey">
-        <div class="w3-container w3-dark-grey w3-center" style="width:85%">85%</div>
-      </div>
-      <p class="w3-wide"><i class="fa fa-photo w3-margin-right"></i>Photoshop</p>
+      <p class="w3-wide"><i class="fa fa-code w3-margin-right"></i>Programming</p>
       <div class="w3-grey">
         <div class="w3-container w3-dark-grey w3-center" style="width:75%">75%</div>
       </div>
+      <p class="w3-wide"><i class="fa fa-desktop w3-margin-right"></i>Web</p>
+      <div class="w3-grey">
+        <div class="w3-container w3-dark-grey w3-center" style="width:20%">20%</div>
+      </div>
+
     </div>
   </div>
 </div>
 
-<!-- Pricing Section -->
+<!-- Pricing Section
 <div class="w3-container w3-center w3-dark-grey" style="padding:128px 16px" id="pricing">
   <h3>PRICING</h3>
   <p class="w3-large">Choose a pricing plan that fits your needs.</p>
@@ -293,12 +270,12 @@ body, html {
       </ul>
     </div>
   </div>
-</div>
+</div> -->
 
 <!-- Contact Section -->
 <div class="w3-container w3-light-grey" style="padding:128px 16px" id="contact">
   <h3 class="w3-center">CONTACT</h3>
-  <p class="w3-center w3-large">mail < at > domain.fr</p>
+  <p class="w3-center w3-large"><del>unlock</del> panda < at > enseirb-matmeca.fr</p>
 </div>
 
 <!-- Footer -->
