--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@ body, html {
     </div>
     <div class="w3-col l3 m6 w3-margin-bottom">
       <div class="w3-card">
-        <img src="./ressources/pandicron.png" alt="Panda" style="width:100%">
+        <img src="./ressources/pandicron.svg" alt="Panda" style="width:100%">
         <div class="w3-container">
           <h3>Panda</h3>
           <p class="w3-opacity">Fondateur</p>
