--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@ body, html {
 /* Full height image header */
 .bgimg-1 {
   background-image: url("./ressources/unlock_full.png");
-  background-position: 20% 50%;
+  background-position: 50% 40%;
   background-color: white;
   background-repeat: no-repeat; /* Do not repeat the image */
   min-height: 100%;
@@ -58,7 +58,7 @@ body, html {
 
 <!-- Header with full-height image -->
 <header class="bgimg-1 w3-display-container" id="home">
-  <div class="w3-display-right w3-text-black" style="padding:48px">
+  <div class="w3-display-bottommiddle w3-center w3-text-black" style="padding:48px">
     <span class="w3-large">Un club de cybersécurite et hack dans ton école.</span>
     <p><a href="#about" class="w3-button w3-gray w3-padding-large w3-large w3-margin-top w3-opacity w3-hover-opacity-off">En savoir plus</a></p>
   </div>
@@ -66,7 +66,7 @@ body, html {
 
 <!-- About Section -->
 <div class="w3-container" style="padding:128px 16px" id="about">
-  <h3 class="w3-center">Unlock</h3>
+  <!-- <h3 class="w3-center">Unlock</h3>-->
   <p class="w3-center w3-large">Nos activités</p>
   <div class="w3-row-padding w3-center" style="margin-top:64px">
     <div class="w3-quarter">
@@ -92,16 +92,13 @@ body, html {
   </div>
 </div>
 
-<!-- Promo Section - "We know design" -->
+<!-- Ressources section -->
 <div class="w3-container w3-light-grey" style="padding:128px 16px">
   <div class="w3-row-padding">
     <div class="w3-col m6">
       <h3>Ressources.</h3>
-      <p>Liste des ressoruces.</p>
+      <p>Liste des ressources.</p>
       <p><a href="#work" class="w3-button w3-black"><i class="fa fa-th"> </i> Liste des pass bandit</a></p>
-    </div>
-    <div class="w3-col m6">
-      <img class="w3-image w3-round-large" src="/w3images/phone_buildings.jpg" alt="Some shit ?" width="700" height="394">
     </div>
   </div>
 </div>
@@ -191,7 +188,7 @@ body, html {
   </div>
 </div> -->
 
-<!-- Skills Section -->
+<!-- Skills Section NON EN VRAI ON A PAS DE SKILLS X)
 <div class="w3-container w3-light-grey w3-padding-64">
   <div class="w3-row-padding">
     <div class="w3-col m6">
@@ -214,7 +211,7 @@ body, html {
 
     </div>
   </div>
-</div>
+</div> -->
 
 <!-- Pricing Section
 <div class="w3-container w3-center w3-dark-grey" style="padding:128px 16px" id="pricing">
